Fixed linkedin button layout issue

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -308,6 +308,13 @@ footer
     margin: 0 0 1em
   .twitter-follow-button
     margin-bottom: 1em
+  .linkedin-follow-button
+    float: none
+    img
+      width: 182px
+      height: 28px
+    +at-breakpoint(30em 6)
+      float: right
   +at-breakpoint(45em 7)
     +clearfix
     h2
